# mpcnc-freecad

./: .gitignore  1x1v2-01-WaterTerrain.stl  1x1v2-02-WaterTerrain.stl  1x1v2-04-WaterTerrian.stl  1x1v2-07-WaterTerrian.stl  1x1v2-08-WaterTerrain.stl  1x1v2-09-WaterTerrian.stl  1x1v2-10-WaterTerrian.stl  1x1v2-13-WaterTerrain.stl  1x1v2-14-WaterTerrian.stl  1x1v2-15-WaterTerrain.stl  1x1v2-16-WaterTerrain.stl  1x1v2-17-WaterTerrain.stl  1x1v2-18-WaterTerrian.stl  1x1v2-19-WaterTerrian.stl  1x2v2-01-WaterTerrian.stl  1x2v2-02-WaterTerrain.stl  1x2v2-03-WaterTerrian.stl  1x2v2-04-WaterTerrain.stl  1x2v2-05-WaterTerrain.stl  1x2v2-06-WaterTerrian.stl  1x2v2-07-WaterTerrian.stl  1x2v2-09-WaterTerrain.stl  1x2v2-10-WaterTerrian.stl  1x2v2-11-WaterTerrain.stl  1x2v2-12-WaterTerrian.stl  1x2v2-13-WaterTerrian.stl  1x2v2-16-WaterTerrain.stl  1x2v2-17-WaterTerrian.stl  1x2v2-20-WaterTerrian.stl  1x3v2-01-WaterTerrain.stl  1x3v2-03-WaterTerrain.stl  1x3v2-04-WaterTerrian.stl  1x3v2-05-WaterTerrain.stl  1x3v2-06-WaterTerrian.stl  1x3v2-07-WaterTerrain.stl  1x3v2-08-WaterTerrian.stl  1x3v2-10-WaterTerrain.stl  1x3v2-12-WaterTerrain.stl  1x3v2-13-WaterTerrian.stl  (+79 more)
BookBindingTemplates/: BookBindingTemplates.FCMacro  FirstThreeSizes.3mf  PROJECT.md  README.md  Template3.5x5x1.stl  config.py  sizes.py  template.py
CampBedFrame/: Dice Tower-BottomSection.stl  Dice Tower-TopSection.stl  README.md  Unnamed-foot.stl  Unnamed.FCStd  feet.py  load_feet_macro.FCMacro  test_chevron.py
ChairBracket/: Chair Bracket-Loft.3mf  Chair Bracket-Loft.stl  Chair Bracket.FCStd  Chair Bracket.FCStd1  (+1 more)
(+274 files in other folders)
